--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@ html >
     <link href="https://cdn.materialdesignicons.com/7.2.96/css/materialdesignicons.min.css" rel="stylesheet">
 
     <script>
+         window.onload = function() {
+        window.scrollTo(0, 0);
+      }
+      
       tailwind.config = {
         theme: {
           extend: {
@@ -24,6 +28,9 @@ html >
         },
       }
     </script>
+  
+   
+    
 </head>
 <body class="font-poppins">
     <div id="root"></div>
